# Code_ol_judges

./: CMakeLists.txt  Readme
CTCI/: Readme
CTCI/Array And Strings/: prob_1_2.c  prob_1_3.c
CTCI/Array_Strings/: prob_1_1.c
CTCI/Linked List/: 1  a.out  linked_list.cpp
LeetCode/: P_111.c  P_136.cpp  P_6.cpp  P_63.cpp  P_7.cpp  a.out  p3.c  p_9.cpp
LeetCode/C++/: P1.c  P3.cpp  P_461.cpp  P_63.cpp  P_9.cpp
LeetCode/C-C++/: P_111.c  P_318.cpp
LeetCode/C:C++/: P2.cpp  P_136.cpp  P_5.cpp  P_70.c
LeetCode/Python/: Problem_19.py  Problem_20.py  Problem_21.py  Problem_22.py  Problem_26.py
LeetCode/top_interview_qus/python/: top_k_frequent_elements.py
Practice-C++/OOP/: Observer.cpp  Singleton.cc  Strategy.cc
