cmake_minimum_required(VERSION 3.7)
project(Coding_Practice)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        "CTCI/Array And Strings/prob_1_1.c"
        "CTCI/Array And Strings/prob_1_2.c"
        "CTCI/Array And Strings/prob_1_3.c"
        "CTCI/Linked List/linked_list.cpp"
        "CTCI/Linked List/prob1.cpp"
        "DS /Arrayspointers/p1.c"
        "DS /Arrayspointers/p2.c"
        "DS /Arrayspointers/p3.c"
        "DS /Arrayspointers/p4.c"
        "DS /Arrayspointers/p5.c"
        "DS /Arrayspointers/p6.c"
        "DS /Arrayspointers/p7.c"
        "DS /Arrayspointers/p8.c"
        "DS /Arrayspointers/p9.c"
        "DS /Arrayspointers/pa10.c"
        "DS /Arrayspointers/pa11.c"
        "DS /Arrayspointers/pa12.c"
        "DS /Arrayspointers/pa13.c"
        "DS /Arrayspointers/pa14.c"
        "DS /Arrayspointers/pa15.c"
        "DS /Arrayspointers/pa16.c"
        "DS /Arrayspointers/pa17.c"
        "DS /Arrayspointers/pa18.c"
        "DS /Arrayspointers/pa19.c"
        "DS /Arrayspointers/pb20.c"
        "DS /Arrayspointers/pb21.c"
        "DS /Arrayspointers/pb22.c"
        "DS /Arrayspointers/pb23.c"
        "DS /Arrayspointers/pb24.c"
        "DS /Arrayspointers/pb25.c"
        "DS /Arrayspointers/pc30.c"
        "DS /Arrayspointers/pc31.c"
        "DS /Arrayspointers/pc33.c"
        "DS /Arrayspointers/pc34.c"
        "DS /Arrayspointers/pc35.c"
        "DS /Arrayspointers/pc36.c"
        "DS /Arrayspointers/pc37.c"
        "DS /Arrayspointers/pc38.c"
        "DS /Arrayspointers/pc39.c"
        "DS /Arrayspointers/pd40.c"
        "DS /Arrayspointers/pd41.c"
        "DS /Arrayspointers/pd42.c"
        "DS /Graph/AD_DEL_A.C"
        "DS /Graph/ADJ_CREA.C"
        "DS /Graph/DJKSTRA.C"
        "DS /Graph/KRUSKAL.C"
        "DS /Graph/LINKGR.C"
        "DS /Graph/MODIWARS.C"
        "DS /Graph/PATHMAT.C"
        "DS /Graph/PRIMS.C"
        "DS /Graph/TOPSORT.C"
        "DS /Graph/TRAVERSE.C"
        "DS /Graph/WARSH.C"
        "DS /Introduction/FACT.C"
        "DS /Introduction/FIBO.C"
        "DS /Introduction/FIRSTAP.C"
        "DS /Introduction/STRCAT.C"
        "DS /Introduction/STRCMP.C"
        "DS /Introduction/STRCOPY.C"
        "DS /Introduction/STRLEN.C"
        "DS /Introduction/SUBSTR.C"
        "DS /Introduction/T_HANOI.C"
        "DS /Introduction/TAILREC.C"
        "DS /Linked List/ARRLIST.C"
        "DS /Linked List/CIRCLIST.C"
        "DS /Linked List/DOUBLELI.C"
        "DS /Linked List/LINKLIST.C"
        "DS /Linked List/POLYADD.C"
        "DS /Linked List/REVERSE.C"
        "DS /Linked List/SORTEDLI.C"
        "DS /Searching/BSEARCH.C"
        "DS /Searching/LINEAR.C"
        "DS /Sorting/ADDR_CAL.C"
        "DS /Sorting/BUBBLE.C"
        "DS /Sorting/HEAPSORT.C"
        "DS /Sorting/INSERTION.C"
        "DS /Sorting/MERGE.C"
        "DS /Sorting/MRGSORT.C"
        "DS /Sorting/MSORTREC.C"
        "DS /Sorting/QUICK.C"
        "DS /Sorting/RADIX.C"
        "DS /Sorting/SELECTION.C"
        "DS /Sorting/SHELL.C"
        "DS /Stack and Queue/CIRQUEUE.C"
        "DS /Stack and Queue/DEQUE.C"
        "DS /Stack and Queue/PARENTH.C"
        "DS /Stack and Queue/POSTFIX.C"
        "DS /Stack and Queue/PRIORITY.C"
        "DS /Stack and Queue/QUE_CL.C"
        "DS /Stack and Queue/QUEUE_A.C"
        "DS /Stack and Queue/QUEUE_L.C"
        "DS /Stack and Queue/REVERSE.C"
        "DS /Stack and Queue/SPARSE.C"
        "DS /Stack and Queue/STACK_A.C"
        "DS /Stack and Queue/STACK_L.C"
        "DS /Trees/AVL.C"
        "DS /Trees/BST.C"
        "DS /Trees/BTREE.C"
        "DS /Trees/HEAP.C"
        "DS /Trees/THREAD.C"
        LeetCode/C-C++/P1.c
        LeetCode/C-C++/P2.cpp
        LeetCode/C-C++/P3.cpp
        LeetCode/C-C++/P_111.c
        LeetCode/C-C++/P_136.cpp
        LeetCode/C-C++/P_318.cpp
        LeetCode/C-C++/P_461.cpp
        LeetCode/C-C++/P_5.cpp
        LeetCode/C-C++/P_6.cpp
        LeetCode/C-C++/P_63.cpp
        LeetCode/C-C++/P_7.cpp
        LeetCode/C-C++/P_70.c
        LeetCode/C-C++/P_9.cpp)

add_executable(Coding_Practice ${SOURCE_FILES})